--- a/README
+++ b/README
@@ -3,6 +3,10 @@ Welcome to your Appcelerator Titanium Mobile Project
 This is a blank project.  Start by editing your application's app.js to 
 make your first mobile project using Titanium.
 
+aswdf
+asdf
+asdf
+asdf
 
 
 ----------------------------------
